--- a/Week 4/ReadIt/style.css
+++ b/Week 4/ReadIt/style.css
@@ -1,3 +1,117 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+
 body {
-	font-family: sans-serif;
+	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.title {
+	padding: 10px;
+	background-color: green;
+	margin-bottom: 10px;
+	box-shadow: 0px 2px 5px black;
+	color: white;
+}
+
+.rating-bar {
+	display: flex;
+	flex-direction: row;
+	border: black 1px solid;
+	width: 95%;
+	margin: 0 1px;
+}
+
+.book-count {
+	text-align: center;
+}
+
+.review-box {
+	width: 1%;
+	height: 5px;
+}
+
+.positive-review {
+	background-color: green;
+}
+
+.negative-review {
+	background-color: white;
+}
+
+.book {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+	padding: 10px;
+	align-items: center;
+	justify-content: center;
+	background-color: rgb(205, 205, 205);
+	margin: 0px 10px;
+	border-radius: 5px;
+}
+
+.book:nth-child(even) {
+	background-color: rgb(157, 157, 157);
+}
+
+.book-list {
+	display: flex;
+	gap: 15px;
+	flex-direction: column;
+}
+
+.head-row {
+	display: flex;
+	justify-content: space-between;
+	padding: 10px;
+	margin: 0px 10px;
+}
+
+.sort-option {
+	text-decoration: underline;
+	cursor: pointer;
+	position: relative;
+}
+
+
+.sort-box {
+	display: flex;
+	position: absolute;
+	height: 150px;
+	width: 100px;
+	background-color: rgb(255, 255, 255);
+	color: black;
+	border: black 2px solid;
+	padding: 10px 5px;
+	flex-direction: column;
+	justify-content: space-evenly;
+	right: 5px;
+	border-radius: 10px;
+}
+
+.input-boxes {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+	margin: 0 5px;
+}
+
+input {
+	padding: 5px;
+}
+
+.add-button {
+	background-color: rgb(0, 148, 0);
+	color: white;
+	border: none;
+	padding: 10px 5px;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.add-button:hover {
+	background-color: rgb(0, 84, 0);
+	transition: ease-in-out 0.25s;
 }
